--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<div class="container">
+
+    <div class="row mt-5 mb-5">
+        <div class="col-md-12">
+            <h1 class="text-center"> Sejam bem vindes ao meu blog!
+        </h1>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="coll-md-12">
+           <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem harum esse quia ullam impedit, explicabo dolor temporibus. Reprehenderit praesentium amet nesciunt sunt eveniet accusamus veritatis aut et pariatur impedit.
+
+           </p>
+        </div>
+
+    </div>
+</div>
+
+        <div class="parallax"></div>
+
+        <div class="row mt-5 mb-5">
+            <div class="col-md-12 d-flex justify-content-center">
+                <button class="btn-btn-outline-dark" routerLink = '/feed'>Ver o feed </button>
+            </div>
+        </div>
+
+
