--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -1,1 +1,64 @@
-<p>feed works!</p>
+<div class="container">
+
+    <div class="row mt-5 mb-5">
+
+        <div class="col-md-4">
+            <div class="card border-0" style="width: 18rem;">
+                <div class="d-flex justify-content-center">
+                    <img class="card-img-top rounded-circle w-75" src=".../100px180/" alt="card-img-top">
+                </div>
+
+
+               
+                <div class="card-body">
+                  <h5 class="card-title text-center">Kadu Henrique Furtado</h5>
+
+                  <p class="card-text text-center">Estudante Generation turma Azul, do curso Web Java Junior </p>
+
+                  <a href="https://www.linkedin.com/in/kadu-henrique-furtado-274a9593" class="btn btn-outline-dark d-flex justify-content-center mb-3" target="_blank">Linkedin</a>
+
+                  <a href="https://github.com/kaduhenrique" class="btn btn-outline-info d-flex justify-content-center" target="_blank">GitHub</a>
+
+                  <hr class="mt-4 mb-4">
+
+                  <h6 class="mb-3 text-monospace text-center">Pesquisar por título</h6>
+
+                  <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem">
+
+                  <button class="btn btn-outline-warning w-100" type="button" >Pesquisar</button>
+                  
+
+                </div>
+              </div>
+
+        </div>
+
+        <div class="col-md-8">
+
+                <h3 class="text-center mb-4 text-monospace" >Como tem sido minha experiência na Generation</h3>
+
+                <div class="form-group">
+                    <label for="título" class="text-monospace">Título:</label>
+                    <input type="text" name="título" id="título" class="form-control" placeholder="Digite seu título">
+                </div>
+
+                    
+                <div class="form-group">
+                    <label for="texto">Texto:</label>
+                    <textarea name="texto" id="texto" cols="30" rows="4" class="form-control" placeholder="Digite seu texto"></textarea>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn-btn-outline-info w-25">Publicar</button>
+                </div>
+                
+                
+                <hr class="mt-5 mb-5">
+
+                <h3 class="text-monospace text-center">Minhas Postagens</h3>
+
+        </div>
+
+    </div>
+
+
+</div>
