--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -39,16 +39,22 @@
 
                 <div class="form-group">
                     <label for="título" class="text-monospace">Título:</label>
-                    <input type="text" name="título" id="título" class="form-control" placeholder="Digite seu título">
+
+                    <input type="text" name="título" id="título" class="form-control"
+                    placeholder="Digite seu título" [(ngModel)]="postagem.titulo">
+
                 </div>
 
                     
                 <div class="form-group">
                     <label for="texto">Texto:</label>
-                    <textarea name="texto" id="texto" cols="30" rows="4" class="form-control" placeholder="Digite seu texto"></textarea>
+
+                    <textarea name="texto" id="texto" cols="30" rows="4" class="form-control"
+                     placeholder="Digite seu texto" [(ngModel)]="postagem.texto"></textarea>
+
                 </div>
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn-btn-outline-info w-25">Publicar</button>
+                    <button type="button" class="btn-btn-outline-info w-25" (click)="publicar()">Publicar</button>
                 </div>
                 
                 
