--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -54,7 +54,8 @@
 
                 </div>
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn-btn-outline-info w-25" (click)="publicar()">Publicar</button>
+                    <button type= "button" class="btn btn-outline-info w-25" 
+                    (click)= "publicar()">Publicar</button>
                 </div>
                 
                 
@@ -65,7 +66,27 @@
                 <div class="car mb-4" *ngFor="let postagem of listaPostagens | orderBy : key : reverse">
 
                     <div class="card-header">
+
+                        <div class="row">
+                           <div class="col-md-8">
+                               <h5 class="card-title"> {{ postagem.titulo}} </h5>
+                           </div>
+
+                           <div class="col-md-4 d-flex justify-content-end">
+                               <buton class="btn btn-outline-info"
+                               [routerLink] = "['/editar', postagem.id]" >
+
+                               </buton>
+                           </div>
+                        </div>
+
                       <h5 class="card-title"> {{ postagem.titulo }}  </h5>
+
+                      <button class="btn btn-outline-info" 
+                      [routerLink] = "['/editar', postagem.id]" >
+                          Editar
+                        </button>
+
                     </div>
 
                     <div class="card-body">
